// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`.getParametersAsJSONSchema() > $ref quirks > should retain $ref pointers in the schema even if they're circular 1`] = `
[
  {
    "label": "Headers",
    "schema": {
      "$schema": "http://json-schema.org/draft-04/schema#",
      "components": {
        "schemas": {
          "ProductStock": {
            "properties": {
              "test_param": {
                "items": {
                  "$ref": "#/components/schemas/SalesLine",
                  "x-readme-ref-name": "SalesLine",
                },
                "type": "array",
              },
            },
            "type": "object",
          },
          "SalesLine": {
            "properties": {
              "stock": {
                "$ref": "#/components/schemas/ProductStock",
                "x-readme-ref-name": "ProductStock",
              },
            },
            "type": "object",
          },
        },
      },
      "properties": {
        "content": {
          "items": {
            "$ref": "#/components/schemas/SalesLine",
            "x-readme-ref-name": "SalesLine",
          },
          "type": "array",
        },
      },
      "type": "object",
    },
    "type": "header",
  },
]
`;

exports[`.getParametersAsJSONSchema() > deprecated > parameters > should create deprecatedProps from body and metadata parameters 1`] = `
[
  {
    "deprecatedProps": {
      "schema": {
        "$schema": "http://json-schema.org/draft-04/schema#",
        "properties": {
          "filterLegacy": {
            "deprecated": true,
            "description": "This query parameter is deprecated.

https://github.com/OAI/OpenAPI-Specification/blob/main/versions/3.0.3.md#parameter-object",
            "enum": [
              "active",
              "inactive",
            ],
            "type": "string",
          },
        },
        "required": [
          "status",
        ],
        "type": "object",
      },
      "type": "query",
    },
    "label": "Query Params",
    "schema": {
      "$schema": "http://json-schema.org/draft-04/schema#",
      "properties": {
        "filter": {
          "description": "This query parameter is explicitly **not** deprecated.",
          "enum": [
            "active",
            "inactive",
          ],
          "type": "string",
        },
        "status": {
          "deprecated": true,
          "items": {
            "default": "available",
            "deprecated": true,
            "enum": [
              "available",
              "pending",
              "sold",
            ],
            "type": "string",
          },
          "type": "array",
        },
      },
      "required": [
        "status",
      ],
      "type": "object",
    },
    "type": "query",
  },
  {
    "description": "Pet object that needs to be added to the store",
    "label": "Body Params",
    "schema": {
      "$ref": "#/components/schemas/Pet",
      "$schema": "http://json-schema.org/draft-04/schema#",
      "components": {
        "schemas": {
          "Category": {
            "properties": {
              "id": {
                "deprecated": true,
                "format": "int64",
                "type": "integer",
              },
              "name": {
                "deprecated": true,
                "type": "string",
              },
            },
            "type": "object",
          },
          "Pet": {
            "properties": {
              "category": {
                "$ref": "#/components/schemas/Category",
                "x-readme-ref-name": "Category",
              },
              "category_alt": {
                "$ref": "#/components/schemas/Category",
                "deprecated": true,
                "description": "Though this loads a \`$ref\` to the \`Category\` schema, and that contains deprecated properties within itself, this \`category_alt\` parameter is also deprecated.",
                "x-readme-ref-name": "Category",
              },
              "id": {
                "default": 40,
                "deprecated": true,
                "description": "This \`requestBody\` schema property is marked as deprecated.

https://github.com/OAI/OpenAPI-Specification/blob/main/versions/3.0.3.md#schema-object",
                "examples": [
                  25,
                ],
                "format": "int64",
                "type": "integer",
              },
              "idReadOnly": {
                "default": 40,
                "deprecated": true,
                "examples": [
                  25,
                ],
                "format": "int64",
                "readOnly": true,
                "type": "integer",
              },
              "name": {
                "deprecated": true,
                "examples": [
                  "doggie",
                ],
                "type": "string",
              },
              "photoUrls": {
                "deprecated": true,
                "items": {
                  "deprecated": true,
                  "examples": [
                    "https://example.com/photo.png",
                  ],
                  "type": "string",
                },
                "type": "array",
              },
              "polymorphism": {
                "properties": {
                  "allOf": {
                    "deprecated": true,
                    "description": "This is a \`allOf\` that's marked as deprecated.",
                    "properties": {
                      "status": {
                        "$ref": "#/components/schemas/Status",
                        "x-readme-ref-name": "Status",
                      },
                    },
                    "type": "object",
                  },
                  "anyOf": {
                    "anyOf": [
                      {
                        "$ref": "#/components/schemas/StatusWrapper",
                        "title": "option 1",
                        "x-readme-ref-name": "StatusWrapper",
                      },
                      {
                        "$ref": "#/components/schemas/StatusWrapper",
                        "title": "option 2",
                        "x-readme-ref-name": "StatusWrapper",
                      },
                    ],
                    "deprecated": true,
                    "description": "This is a \`anyOf\` that's marked as deprecated.",
                  },
                  "oneOf": {
                    "deprecated": true,
                    "description": "This is a \`oneOf\` that's marked as deprecated.",
                    "oneOf": [
                      {
                        "$ref": "#/components/schemas/StatusWrapper",
                        "title": "option 1",
                        "x-readme-ref-name": "StatusWrapper",
                      },
                      {
                        "$ref": "#/components/schemas/StatusWrapper",
                        "title": "option 2",
                        "x-readme-ref-name": "StatusWrapper",
                      },
                    ],
                  },
                },
                "type": "object",
              },
              "status": {
                "$ref": "#/components/schemas/Status",
                "x-readme-ref-name": "Status",
              },
              "tags": {
                "deprecated": true,
                "items": {
                  "$ref": "#/components/schemas/Tag",
                  "x-readme-ref-name": "Tag",
                },
                "type": "array",
              },
              "tags_alt": {
                "description": "Unlike the \`tags\` parameter, this is **not** deprecated, but the contents within itself are.",
                "items": {
                  "$ref": "#/components/schemas/Tag_deprecated",
                  "x-readme-ref-name": "Tag_deprecated",
                },
                "type": "array",
              },
            },
            "required": [
              "name",
              "photoUrls",
            ],
            "type": "object",
          },
          "Status": {
            "deprecated": true,
            "description": "pet status in the store",
            "enum": [
              "available",
              "pending",
              "sold",
            ],
            "type": "string",
          },
          "StatusWrapper": {
            "properties": {
              "status": {
                "$ref": "#/components/schemas/Status",
                "x-readme-ref-name": "Status",
              },
            },
            "type": "object",
          },
          "Tag": {
            "properties": {
              "id": {
                "format": "int64",
                "type": "integer",
              },
              "name": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "Tag_deprecated": {
            "properties": {
              "id": {
                "deprecated": true,
                "format": "int64",
                "type": "integer",
              },
              "name": {
                "deprecated": true,
                "type": "string",
              },
            },
            "type": "object",
          },
        },
      },
      "x-readme-ref-name": "Pet",
    },
    "type": "body",
  },
]
`;

exports[`.getParametersAsJSONSchema() > deprecated > polymorphism > should be able to merge enums within an allOf schema 1`] = `
[
  {
    "label": "Body Params",
    "schema": {
      "$schema": "http://json-schema.org/draft-04/schema#",
      "properties": {
        "events": {
          "items": {
            "enum": [
              "one",
              "two",
              "three",
              "four",
              "five",
              "six",
            ],
            "type": "string",
          },
          "minItems": 1,
          "type": "array",
          "uniqueItems": true,
        },
      },
      "type": "object",
    },
    "type": "body",
  },
]
`;

exports[`.getParametersAsJSONSchema() > deprecated > polymorphism > should pass through deprecated on a (merged) allOf schema 1`] = `
[
  {
    "deprecatedProps": {
      "schema": {
        "$schema": "http://json-schema.org/draft-04/schema#",
        "properties": {
          "messages": {
            "deprecated": true,
            "items": {
              "type": "string",
            },
            "type": "array",
          },
        },
        "type": "object",
      },
      "type": "body",
    },
    "label": "Body Params",
    "schema": {
      "$schema": "http://json-schema.org/draft-04/schema#",
      "properties": {
        "uri": {
          "format": "uri",
          "type": "string",
        },
      },
      "type": "object",
    },
    "type": "body",
  },
]
`;

exports[`.getParametersAsJSONSchema() > options > mergeIntoBodyAndMetadata > should merge params categorized as metadata into a single block 1`] = `
[
  {
    "label": "Metadata",
    "schema": {
      "allOf": [
        {
          "$schema": "http://json-schema.org/draft-04/schema#",
          "properties": {
            "petId": {
              "description": "Pet id to delete",
              "format": "int64",
              "type": "integer",
            },
          },
          "required": [
            "petId",
          ],
          "type": "object",
        },
        {
          "$schema": "http://json-schema.org/draft-04/schema#",
          "properties": {
            "api_key": {
              "type": "string",
            },
          },
          "type": "object",
        },
      ],
    },
    "type": "metadata",
  },
]
`;

exports[`.getParametersAsJSONSchema() > parameters > polymorphism > should merge allOf schemas together 1`] = `
[
  {
    "label": "Body Params",
    "schema": {
      "$schema": "http://json-schema.org/draft-04/schema#",
      "components": {
        "schemas": {
          "api.WithdrawalRequest": {
            "properties": {
              "amount": {
                "type": "string",
              },
              "token": {
                "$ref": "#/components/schemas/core.Token",
                "x-readme-ref-name": "core.Token",
              },
              "user": {
                "type": "string",
              },
            },
            "required": [
              "amount",
              "token",
              "user",
            ],
            "type": "object",
          },
          "core.Token": {
            "properties": {
              "data": {},
              "type": {
                "type": "string",
              },
            },
            "type": "object",
          },
        },
      },
      "properties": {
        "amount": {
          "type": "string",
        },
        "token": {
          "$ref": "#/components/schemas/core.Token",
          "x-readme-ref-name": "core.Token",
        },
        "user": {
          "type": "string",
        },
      },
      "required": [
        "amount",
        "token",
        "user",
      ],
      "type": "object",
    },
    "type": "body",
  },
]
`;

exports[`.getParametersAsJSONSchema() > parameters > should convert parameters to JSON schema 1`] = `
[
  {
    "label": "Path Params",
    "schema": {
      "$schema": "http://json-schema.org/draft-04/schema#",
      "properties": {
        "petId": {
          "description": "Pet id to delete",
          "format": "int64",
          "type": "integer",
        },
      },
      "required": [
        "petId",
      ],
      "type": "object",
    },
    "type": "path",
  },
  {
    "label": "Headers",
    "schema": {
      "$schema": "http://json-schema.org/draft-04/schema#",
      "properties": {
        "api_key": {
          "type": "string",
        },
      },
      "type": "object",
    },
    "type": "header",
  },
]
`;

exports[`.getParametersAsJSONSchema() > polymorphism / discriminators > should retain discriminator \`mapping\` refs when present 1`] = `
[
  {
    "label": "Body Params",
    "schema": {
      "$schema": "http://json-schema.org/draft-04/schema#",
      "components": {
        "schemas": {
          "OptionOneNoDisc": {
            "properties": {
              "discrim": {
                "type": "string",
              },
              "optionone": {
                "type": "number",
              },
            },
            "required": [
              "discrim",
            ],
            "type": "object",
          },
          "OptionTwoNoDisc": {
            "properties": {
              "discrim": {
                "type": "string",
              },
              "optiontwo": {
                "type": "string",
              },
            },
            "required": [
              "discrim",
            ],
            "type": "object",
          },
        },
      },
      "discriminator": {
        "mapping": {
          "Option One": "#/components/schemas/OptionOneNoDisc",
          "Option Two": "#/components/schemas/OptionTwoNoDisc",
        },
        "propertyName": "discrim",
      },
      "oneOf": [
        {
          "$ref": "#/components/schemas/OptionOneNoDisc",
          "x-readme-ref-name": "OptionOneNoDisc",
        },
        {
          "$ref": "#/components/schemas/OptionTwoNoDisc",
          "x-readme-ref-name": "OptionTwoNoDisc",
        },
      ],
    },
    "type": "body",
  },
]
`;

exports[`.getParametersAsJSONSchema() > request bodies > should convert request bodies to JSON schema > application/json 1`] = `
[
  {
    "description": "Pet object that needs to be added to the store",
    "label": "Body Params",
    "schema": {
      "$ref": "#/components/schemas/Pet",
      "$schema": "http://json-schema.org/draft-04/schema#",
      "components": {
        "schemas": {
          "Category": {
            "properties": {
              "id": {
                "format": "int64",
                "type": "integer",
              },
              "name": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "Pet": {
            "properties": {
              "category": {
                "$ref": "#/components/schemas/Category",
                "x-readme-ref-name": "Category",
              },
              "id": {
                "default": 40,
                "examples": [
                  25,
                ],
                "format": "int64",
                "readOnly": true,
                "type": "integer",
              },
              "name": {
                "examples": [
                  "doggie",
                ],
                "type": "string",
              },
              "photoUrls": {
                "items": {
                  "examples": [
                    "https://example.com/photo.png",
                  ],
                  "type": "string",
                },
                "type": "array",
              },
              "status": {
                "description": "pet status in the store",
                "enum": [
                  "available",
                  "pending",
                  "sold",
                ],
                "type": "string",
              },
              "tags": {
                "items": {
                  "$ref": "#/components/schemas/Tag",
                  "x-readme-ref-name": "Tag",
                },
                "type": "array",
              },
            },
            "required": [
              "name",
              "photoUrls",
            ],
            "type": "object",
          },
          "Tag": {
            "properties": {
              "id": {
                "format": "int64",
                "type": "integer",
              },
              "name": {
                "type": "string",
              },
            },
            "type": "object",
          },
        },
      },
      "x-readme-ref-name": "Pet",
    },
    "type": "body",
  },
]
`;

exports[`.getParametersAsJSONSchema() > request bodies > should convert request bodies to JSON schema > application/x-www-form-urlencoded 1`] = `
[
  {
    "label": "Path Params",
    "schema": {
      "$schema": "http://json-schema.org/draft-04/schema#",
      "properties": {
        "petId": {
          "description": "ID of pet that needs to be updated",
          "format": "int64",
          "type": "integer",
        },
      },
      "required": [
        "petId",
      ],
      "type": "object",
    },
    "type": "path",
  },
  {
    "label": "Form Data",
    "schema": {
      "$schema": "http://json-schema.org/draft-04/schema#",
      "properties": {
        "name": {
          "description": "Updated name of the pet",
          "type": "string",
        },
        "status": {
          "description": "Updated status of the pet",
          "type": "string",
        },
      },
      "type": "object",
    },
    "type": "formData",
  },
]
`;

exports[`.getParametersAsJSONSchema() > type sorting > should return with a json schema for each parameter type (body instead of formData) 1`] = `
[
  {
    "label": "Path Params",
    "schema": {
      "$schema": "http://json-schema.org/draft-04/schema#",
      "properties": {
        "path parameter": {
          "type": "string",
        },
      },
      "type": "object",
    },
    "type": "path",
  },
  {
    "label": "Query Params",
    "schema": {
      "$schema": "http://json-schema.org/draft-04/schema#",
      "properties": {
        "query parameter": {
          "type": "string",
        },
      },
      "type": "object",
    },
    "type": "query",
  },
  {
    "description": "Body description",
    "label": "Body Params",
    "schema": {
      "$schema": "http://json-schema.org/draft-04/schema#",
      "properties": {
        "a": {
          "type": "string",
        },
      },
      "type": "object",
    },
    "type": "body",
  },
  {
    "label": "Cookie Params",
    "schema": {
      "$schema": "http://json-schema.org/draft-04/schema#",
      "properties": {
        "cookie parameter": {
          "type": "string",
        },
      },
      "type": "object",
    },
    "type": "cookie",
  },
  {
    "label": "Headers",
    "schema": {
      "$schema": "http://json-schema.org/draft-04/schema#",
      "properties": {
        "header parameter": {
          "type": "string",
        },
      },
      "type": "object",
    },
    "type": "header",
  },
]
`;

exports[`.getParametersAsJSONSchema() > type sorting > should return with a json schema for each parameter type (formData instead of body) 1`] = `
[
  {
    "label": "Path Params",
    "schema": {
      "$schema": "http://json-schema.org/draft-04/schema#",
      "properties": {
        "path parameter": {
          "type": "string",
        },
      },
      "type": "object",
    },
    "type": "path",
  },
  {
    "label": "Query Params",
    "schema": {
      "$schema": "http://json-schema.org/draft-04/schema#",
      "properties": {
        "query parameter": {
          "type": "string",
        },
      },
      "type": "object",
    },
    "type": "query",
  },
  {
    "label": "Cookie Params",
    "schema": {
      "$schema": "http://json-schema.org/draft-04/schema#",
      "properties": {
        "cookie parameter": {
          "type": "string",
        },
      },
      "type": "object",
    },
    "type": "cookie",
  },
  {
    "description": "Body description",
    "label": "Form Data",
    "schema": {
      "$schema": "http://json-schema.org/draft-04/schema#",
      "properties": {
        "a": {
          "type": "string",
        },
      },
      "type": "object",
    },
    "type": "formData",
  },
  {
    "label": "Headers",
    "schema": {
      "$schema": "http://json-schema.org/draft-04/schema#",
      "properties": {
        "header parameter": {
          "type": "string",
        },
      },
      "type": "object",
    },
    "type": "header",
  },
]
`;
